# dance_result_federation_parser

./: .credentials  .gitignore  .gitmodules  .pyre_configuration  .sourcery.yaml  2022_DM_SENII_STD.md  2022_DP_SEN_III_S_STD.md  2022_DSF.md  2023_DC_HGR-A-LAT.md  2023_DM_HGRSSTD.md  2023_DM_MAS3SSTD.md  2023_DSF.md  2023_dm_mas2sstd.md  2024_DM_MASIII_S_STD.md  2024_DM_MASII_S_STD.md  2024_DSF.md  2024_GLM_HGR_D-B_LAT.md  2024_GLM_KIN-JUG_STD.md  2024_GLM_MASIII_S_STD.md  2024_HessenTanzt.md  2025_BadBevensenPfingsten.md  2025_BlauesBand.md  2025_DM_HGR_STD.md  2025_DM_Latein.md  2025_DM_MasI-III_Kombi_MasII_U21_STD.md  2025_DM_MasIII_STD.md  2025_DM_MasII_STD.md  2025_DSF.md  2025_GBM_Kombi.md  2025_GCDC.md  2025_GLM_HGRII_MASI-III_LAT.md  2025_GLM_HGRII_MASIII-V_B-A_STD.md  2025_GLM_HGR_MAS_AS_LAT.md  2025_GLM_HGR_MasI_AS_STD.md  2025_GLM_HgrMasI_D-B_STD.md  2025_GLM_Kin-Jug_LAT.md  2025_GLM_MASII_BAS_STD.md  2025_GLM_MASIV_STD.md  2025_GLM_MasIII_STD.md  2025_HGR-Festivals.md  (+152 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: associations.yml  codacy-analysis.yaml  codacy.yml  codacy2.yml  codeql.yml  dependency-review.yml  lintme.yml  pylint.yml  pyre.yml  pysa.yml  pytest.yml  results.yml  sonarcloud.yml  super-linter.yml
.hashes/: .2022_DSF.txt.sha256  .2023_DSF.sha256  .2024_DM_Kombi_U18MASIV_STD.sha256  .2024_GLM_HGR_D-B_LAT.sha256  .2024_GLM_HGR_MASI_A-S_STD.sha256  .2024_GLM_KIN-JUG_STD.sha256  .2024_GLM_MASII-III_HGRII_D-C_STD.sha256  .2025_BadBevensenPfingsten.txt.sha256  .2025_BlauesBand.sha256  .2025_DM_Latein.sha256  .2025_DSF.sha256  .2025_GBM_Kombi.txt.sha256  .2025_GCDC.txt.sha256  .2025_GLM_HGRII_MASI-III_LAT.txt.sha256  .2025_GLM_HGRII_MASIII-V_B-A_STD.txt.sha256  .2025_GLM_HGR_MAS_AS_LAT.txt.sha256  .2025_GLM_HGR_MasI_AS_STD.sha256  .2025_GLM_HgrMasI_D-B_STD.txt.sha256  .2025_GLM_Kin-Jug_LAT.txt.sha256  .2025_GLM_MASII_BAS_STD.sha256  .2025_GLM_MASIV_STD.sha256  .2025_HGR-Festivals.txt.sha256  .2025_HessenTanzt.txt.sha256  .2025_JanuarRLs.sha256  .2025_KielPokal.sha256  .2025_RL-Aachen_HGR-LAT_MasI_IV_STD.txt.sha256  .2025_danceComp.sha256  .2026_BerlinDanceFestival.txt.sha256  .2026_BlauesBand.sha256  .2026_DM_LAT.txt.sha256  .2026_GLM_SenII_BAS_STD.txt.sha256  .2026_HessenTanzt.txt.sha256  .2026_JanuarRLs.sha256  .2026_TTC_Sparkassenpokal.txt.sha256  .BDF_2024.sha256  .BadBevensen_Pfingsten_2023.txt.sha256  .BadBevensen_Pfingsten_2024.txt.sha256  .BlauesBand2024.sha256  .DM_Equality_2024.txt.sha256  .DM_Latein_2024.txt.sha256  (+13 more)
.ipynb_checkpoints/: TestMerge-checkpoint.ipynb
.trunk/: trunk.yaml  trunk.yaml.sedbackup
.trunk/config/: .yamllint.yaml
Results/: 2022_DSF.txt  2023_DSF.md  2024_BlauesBand2024.txt  2024_DSF.txt  2024_GBM_Kombi.txt  2024_GLM_HGRII_B-S_MASIII_B-A_MASV_S_STD.txt  2024_GLM_HGR_A+S_MAS_S_LAT.md  2024_GLM_MASII-III_HGRII_D-C_STD.txt  2024_GLM_MasII_BAS_STD.txt  2024_GLM_MasIV_STD.txt  2024_HessenTanzt.txt  2024_RL_GLINDE.md  2024_RL_GLINDE.txt  2024_WiDaFe.txt  2024_danceComp.md  2024_danceComp.txt  2025_BadBevensenPfingsten.txt  2025_BlauesBand.md  2025_DM_Latein.md  2025_DM_MasI-III_Kombi_MasII_U21_STD.txt  2025_DSF.md  2025_GBM_Kombi.txt  2025_GCDC.md  2025_GLM_HGRII_MASI-III_LAT.txt  2025_GLM_HGRII_MASIII-V_B-A_STD.md  2025_GLM_HGR_MAS_AS_LAT.md  2025_GLM_HGR_MasI_AS_STD.md  2025_GLM_HgrMasI_D-B_STD.md  2025_GLM_MASII_BAS_STD.txt  2025_GLM_MASIV_STD.md  2025_HGR-Festivals.txt  2025_HessenTanzt.md  2025_JanuarRLs.md  2025_KielPokal.txt  2025_SDC.md  2025_danceComp.txt  2026_BerlinDanceFestival.md  2026_BlauesBand.txt  2026_DM_LAT.txt  2026_GLM_SenII_BAS_STD.md  (+17 more)
associations/: 'Bayern'.txt  'Berlin'.txt  'Bremen'.txt  'HATV'.txt  'HTV'.txt  'LTV Br'.txt  'NTV'.txt  'SLT'.txt  'TBW'.txt  'TMV'.txt  'TNW'.txt  'TRP'.txt  'TSH'.txt  'TTSV'.txt  'TVS'.txt  'TVSA'.txt  (TAF).txt  Bayern.txt  Berlin.txt  Brandenburg.txt  Bremen.txt  HATV.txt  HTV.txt  LTV Br.txt  LTV Bremen.txt  NTV.txt  SLT.txt  Saarland.txt  Sachsen-Anhalt.txt  Sachsen.txt  TBW.txt  TMV.txt  TNW.txt  TRP.txt  TSH.txt  TTSV.txt  TVS.txt  TVSA.txt  Thüringen.txt
mdResults/: 2024_DSF.md  2024_GBM_Kombi.md  2024_GLM_HGRII_MASI-III_LAT.md  2024_HessenTanzt.md  2024_WiDaFe.md  2025_BlauesBand.md  2025_DM_Latein.md  2025_DM_MasI-III_Kombi_MasII_U21_STD.md  2025_GCDC.md  2025_GLM_HgrMasI_D-B_STD.md  2025_GLM_MASIV_STD.md  2025_HessenTanzt.md  2025_SDC.md  2026_BlauesBand.md  GLM4_MASIV_STD_2023.md
