# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
jobs = 0

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
#line-length = 79
target-version = ['py310'] #'py37', 'py38',
color = true
safe = true

#force-exlude = ".*/venv/.*"
[tool.darker]
revision = "main"
diff = true
check = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"

[tool.flake8]
max-line-length = 79

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
disallow_untyped_defs = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "psutil",
    "pandas",
    "joblib",
    "lxml.*",
    "bs4.*",
    "pyannotate_runtime"
]
ignore_missing_imports = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
py_version = 310
color_output = true
profile = "black"
skip = "venv"

[pylama.pep8]
max_line_length = 88

[pylama.pycodestyle]
max_line_length = 88

[pylama.pylint]
max_line_length = 88

[tool.pylint.MASTER]
jobs = 0
output-format = "colorized"
include-naming-hint = "y"
extension-pkg-whitelist = "lxml"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = ["--verbose"]

[tool.towncrier]

[tool.poetry]
name = "resultparser"
version = "0.1.0"
description = ""
authors = ["Ebeling, Dr. Bastian <bastian.ebeling@web.de>"]

[tool.poetry.dependencies]
bs4 = "*"
colorama = "*"
fastparquet = "*"
html5lib = "*"
joblib = "*"
lxml = "*"
mypy = "*"
pandas = "*"
pylint = "*"
python = "~3.10"
radon = "*"
requests = "*"
typing = "*"
typing-extensions = "*"
valuefragments = { git = "https://github.com/Barry1/PyValueFragments.git", rev = "main" }

[tool.poetry.dev-dependencies]
#{ version = "*", python = "<=3.7" }
black = "*"
isort = "*"
MonkeyType = "^22.2.0"
mypy = "*"
nuitka = "*"
ordered-set = "*"
prospector = "^1.7.7"
pyannotate = "^1.2.0"
pyflakes = "^2.4.0"
pylama = "*"
pyre-check = {version="*", platform="linux"}
pyright = "^1.1.256"
pytype = "*"
retype="*"
types-requests = "*"
vermin = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
