# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
jobs = 0
ignore = ["E203"]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 79
target-version = ['py311'] #'py37', 'py38',
color = true
safe = true

#force-exlude = ".*/venv/.*"
[tool.darker]
revision = "main"
diff = true
check = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"

[tool.flake8]
max-line-length = 79
extend-ignore = "E203"

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
disallow_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
python_version = "3.11"
show_error_codes = true
show_error_context = true
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["psutil", "pandas", "joblib", "lxml.*", "bs4.*", "pyannotate_runtime"]
ignore_missing_imports = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
py_version = 310 #311 not yet supported
# color_output = true
line_length = 79
profile = "black"
skip = "venv"

[tool.pylama.pep8]
max_line_length = 88

[tool.pylama.pycodestyle]
max_line_length = 88

[tool.pylama.pylint]
max_line_length = 88

[tool.pylint.MASTER]
jobs = 0
output-format = "colorized"
include-naming-hint = "y"
extension-pkg-whitelist = "lxml"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
#useLibraryCodeForTypes = true
pythonPlatform = "All"
pythonVersions = "3.11"
reportMissingImports = true
reportMissingTypeStubs = true
typeCheckingMode = "strict"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose"]

[tool.towncrier]

[tool.poetry]
name = "dance_result_federation_parser"
version = "0.1.2"
description = ""
authors = ["Ebeling, Dr. Bastian <bastian.ebeling@web.de>"]

[tool.poetry.dependencies]
bs4 = "*"
fastparquet = "*"
html5lib = "*"
joblib = "*"
lxml = "*"
pandas = "*"
python = "^3.11"
radon = "*"
requests = "*"
typing = "*"
typing-extensions = "*"
aiofiles = ">=22.1.0"
pyarrow = "*"
pytype = "^2024.3.11"
ruff = "^0.3.7"
pylyzer = "^0.0.51"

[tool.poetry.dependencies.valuefragments]
git = "https://github.com/Barry1/PyValueFragments.git"
rev = "main"

[tool.poetry.group.dev.dependencies]
colorama = ">=0.4.5"
flake8 = ">5"
importlib-resources = "^5.12.0"
MonkeyType = ">=22.2.0"
mypy = "*"
nuitka = "*"
ordered-set = "*"
prospector = ">=1.7.7"
pyanalyze = "^0.9.0"
pyannotate = ">=1.2.0"
pyflakes = ">=2.5.0"
pylint = "*"
pyright = ">=1.1.256"
pytest = ">=7"
retype = "*"
types-aiofiles = ">=22.1.0"
types-requests = "^2.28.11.7"
ufmt = ">=2.0.1"
vermin = ">=1.4.0"
vulture = ">=2.5"
sourcery = "^1.1.0"

[tool.poetry.group.dev.dependencies.black]
version = ">22"
allow-prereleases = true

[tool.poetry.group.dev.dependencies.isort]
extras = ["colors"]
version = "*"

[tool.poetry.group.dev.dependencies.pyre-check]
version = "*"
platform = "linux"

[tool.poetry.group.dev.dependencies.pytype]
version = ">=2022.10.26"
python = "~3.10"

[tool.poetry.group.dev.dependencies.pylama]
extras = ["all"]
version = ">8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
