# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
jobs = 0
ignore = ["E203"]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 79
target-version = ['py312'] #'py37', 'py38',
color = true
#safe = true

#force-exlude = ".*/venv/.*"
[tool.darker]
revision = "main"
diff = true
check = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"

[tool.bandit]
skips = ["B101", "B608"]

[tool.flake8]
max-line-length = 79
extend-ignore = "E203"

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
disallow_untyped_defs = true
#install_types = true
#non_interactive = true
pretty = true
python_version = "3.12"
show_error_codes = true
show_error_context = true
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["psutil", "pandas", "joblib", "lxml.*", "bs4.*", "pyannotate_runtime"]
ignore_missing_imports = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
py_version = 312 #311 not yet supported
# color_output = true
line_length = 79
profile = "black"
skip = "venv"

[tool.pylama.pep8]
max_line_length = 88

[tool.pylama.pycodestyle]
max_line_length = 88

[tool.pylama.pylint]
max_line_length = 88

[tool.pylint.MASTER]
jobs = 0
output-format = "colorized"
include-naming-hint = "y"
extension-pkg-whitelist = "lxml"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
#useLibraryCodeForTypes = true
pythonPlatform = "All"
pythonVersions = "3.12"
reportMissingImports = true
reportMissingTypeStubs = true
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose"]

[tool.towncrier]

[project]
name = "dance_result_federation_parser"
version = "0.2.11"
description = ""
#authors = [name="Ebeling, Dr. Bastian",mail="bastian.ebeling@web.de"]
dependencies = [
  "aiofiles>=24",
  #  "bs4>=0.0.2",
  "beautifulsoup4>=4",
  "fastparquet>=2024",
  "joblib>=1.4",
  "lxml>=5",
  "requests>=2.32",
  "valuefragments @ git+https://github.com/Barry1/PyValueFragments.git",
  "ty (>=0.0.1a6,<0.0.2)",
  "pyrefly (>=0.16.3,<0.17.0)",
  "pyanalyze (>=0.13.1,<0.14.0)",
]
requires-python = ">=3.12"
#flask = "^3.0.3"
#html5lib = ">=1.1" # no longer needed
#pyarrow = ">=16"
#typing = "=3.7.4.1"
#typing-extensions = ">=4.3"
[tool.poetry]
package-mode = false
#[tool.poetry.dependencies]
#python = "^3.11"
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
[tool.poetry.group.dev.dependencies]
#lxml-stubs = "*"
colorama = ">=0.4.5"
flake8 = ">7"
flynt = "^1.0.1"
importlib-resources = "^5.12.0"
joblib-stubs = "*"
MonkeyType = ">=23.3.0"
mypy = ">=1.15"
nuitka = ">=2.6.9"
ordered-set = "*"
pandas-stubs = "*"
pipdeptree = ">2.25"
#prospector = ">=1.7.7"
#pyanalyze = "^0.9.0"
pyannotate = ">=1.2.0"
pyflakes = ">=3"
#pylint = ">=3.3.6"
#pylyzer = "^0.0.51"
pyright = ">1.1.390"
#pytest = ">8.3.3"
#radon = ">=6.0"
#retype = "*" # typed-ast not in python3.13
ruff = "^0.3.7"
sourcery = "^1.35.0"
types-aiofiles = ">=22.1.0"
types-cffi = "^1.16.0.20240331"
types-lxml = "*"
types-openpyxl = "*"
types-requests = "^2.28.11.7"
ufmt = ">=2.7.1"
vermin = ">=1.6.0"
vulture = ">=2.14"

[tool.poetry.group.dev.dependencies.black]
version = ">22"
allow-prereleases = true

[tool.poetry.group.dev.dependencies.isort]
extras = ["colors"]
version = "*"

[tool.poetry.group.dev.dependencies.pyre-check]
version = "*"
platform = "linux"

[tool.poetry.group.dev.dependencies.pytype]
version = ">=2024"
#markers = "sys_platform == 'linux'" 
platform = "linux"

[tool.poetry.group.dev.dependencies.pylama]
extras = ["all"]
version = ">8.4"
python = ">=3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flynt]
aggressive = true
transform_concats = true
transform_joins = true
fail_on_change = true
